samples/_failures_safe/1761128101_b9d0f7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_849ada38.c: In function ‘main’:
./samples/SAFE/__tmp_849ada38.c:155:9: error: expected ‘;’ at end of input
  155 |     mat1
      |         ^
      |         ;
./samples/SAFE/__tmp_849ada38.c:155:5: error: expected declaration or statement at end of input
  155 |     mat1
      |     ^~~~
